--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<!-- saved from url=(0042)file:///D:/workspace/my_resume/index.html# -->
+<!-- saved from url=(0072)file:///D:/workspace/my_resume/%E6%88%91%E7%9A%84%E7%AE%80%E5%8E%86.html -->
 <html lang="en" class=""><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <title>我的简历</title>
-    <link rel="stylesheet" href="./我的简历_files/style.css">
-    <link rel="stylesheet" href="./我的简历_files/remodal.css">
-    <link rel="stylesheet" href="./我的简历_files/remodal-default-theme.min.css">
+    <link rel="stylesheet" href="./index_files/style.css">
+    <link rel="stylesheet" href="./index_files/remodal.css">
+    <link rel="stylesheet" href="./index_files/remodal-default-theme.min.css">
     <!--
     <script src="./我的简历_files/jquery.min.js.下载"></script>
     <script src="./我的简历_files/remodal.min.js.下载"></script>
@@ -95,7 +95,7 @@
                 <h2 class="info-header"><i class="iconfont icon-weixin"></i> <span class="info-title" contenteditable="true">个人微信</span><span class="unit-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></h2>
                 <hr>
                 <div class="weixin">
-                    <img src="./我的简历_files/wechat.jpg" alt="">
+                    <img src="./index_files/wechat.jpg" alt="">
 
                 </div>
             </div>
@@ -119,21 +119,21 @@
                 <ul class="experience-list">
                     <li>
                         <h3 contenteditable="true">个人博客www.wangjojo.top</h3>
-                        <p contenteditable="true"><div><div><ol class=" list-paddingleft-2" style="width: 480.688px; padding-left: 30px; color: rgb(0, 0, 0); font-family: sans-serif; font-size: 16px;"><li style="clear: both;"><p style="margin-top: 5px; margin-bottom: 5px;">nginx + uwsgi + django部署</p></li><li style="clear: both;"><p style="margin-top: 5px; margin-bottom: 5px;">gitreceive推送代码，自动更新</p></li><li style="clear: both;"><p style="margin-top: 5px; margin-bottom: 5px;">mysql数据库，aliyun服务器</p></li><li style="clear: both;"><p style="margin-top: 5px; margin-bottom: 5px;">外接了畅言作为评论系统</p></li></ol><div><br></div></div></div>
-                        </p>
+                        <p contenteditable="true"></p><div><div><ol class=" list-paddingleft-2" style="width: 480.688px; padding-left: 30px; color: rgb(0, 0, 0); font-family: sans-serif; font-size: 16px;"><li style="clear: both;"><p style="margin-top: 5px; margin-bottom: 5px;">nginx + uwsgi + django部署</p></li><li style="clear: both;"><p style="margin-top: 5px; margin-bottom: 5px;">gitreceive推送代码，自动更新</p></li><li style="clear: both;"><p style="margin-top: 5px; margin-bottom: 5px;">mysql数据库，aliyun服务器</p></li><li style="clear: both;"><p style="margin-top: 5px; margin-bottom: 5px;">外接了畅言作为评论系统</p></li></ol><div><br></div></div></div>
+                        <p></p>
                     <span class="item-remove" style="visibility: visible;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
                         <h3 contenteditable="true">仿慕课网在线教育平台</h3>
-                        <p contenteditable="true">1.使用django从零开始完善后台逻辑，项目基本可以上线<div>2.完整的用户登录，注册，以及验证</div><div>3.完整的用户后台，可以修改邮箱，密码，个人信息</div><div>4.实现课程，教师，机构的收藏，资源的下载<br><div>5.实现全局搜索，热门推荐，相似推荐</div></div><div><br></div></p>
+                        <p contenteditable="true">1.使用django从零开始完善后台逻辑，项目基本可以上线</p><div>2.完整的用户登录，注册，以及验证</div><div>3.完整的用户后台，可以修改邮箱，密码，个人信息</div><div>4.实现课程，教师，机构的收藏，资源的下载<br><div>5.实现全局搜索，热门推荐，相似推荐</div></div><div><br></div><p></p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
                         <h3 contenteditable="true">多人博客</h3>
-                        <p contenteditable="true">.在个人博客的基础上拓展为多人博客，目前开发中，已实现：<div>1.博客的详情分类展示，作者的展示等博客基本功能</div><div>2..<span style="display: inline !important;">用户登录，注册，以及验证</span></div><div>3..基本完善的用户后台</div><div>4.xadmin 拓展的系统后台</div><div><div><br></div></div></p>
+                        <p contenteditable="true">.在个人博客的基础上拓展为多人博客，目前开发中，已实现：</p><div>1.博客的详情分类展示，作者的展示等博客基本功能</div><div>2..<span style="display: inline !important;">用户登录，注册，以及验证</span></div><div>3..基本完善的用户后台</div><div>4.xadmin 拓展的系统后台</div><div><div><br></div></div><p></p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
                         <h3 contenteditable="true">爬虫</h3>
                         <p contenteditable="true">
-                            1.request + bs4 爬取pixiv ，并可分类爬取，爬取登录后内容<div>2.<span style="display: inline !important;">request + bs4 爬取猫眼电影榜单</span></div><div><span style="display: inline !important;">3.pyspider 爬取淘女郎信息</span></div><div><span style="display: inline !important;">4.selenium 模拟登录网易邮箱</span></div></p>
+                            1.request + bs4 爬取pixiv ，并可分类爬取，爬取登录后内容</p><div>2.<span style="display: inline !important;">request + bs4 爬取猫眼电影榜单</span></div><div><span style="display: inline !important;">3.pyspider 爬取淘女郎信息</span></div><div><span style="display: inline !important;">4.selenium 模拟登录网易邮箱</span></div><p></p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                 </ul>
             </div>
@@ -141,7 +141,7 @@
             <div class="aboutme info-unit right-paragraph">
                 <h2 class="info-header"><i class="iconfont icon-flower"></i> <span class="info-title" contenteditable="true">自我评价</span><span class="unit-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></h2>
                 <hr>
-                <p contenteditable="true"><ol style="outline: 0px; padding: 0px 0px 0px 2em; list-style-position: initial; list-style-image: initial; color: rgb(85, 85, 85); font-family: &quot;Hiragino Sans GB&quot;, &quot;Microsoft Yahei&quot;, SimSun, Arial, &quot;Helvetica Neue&quot;, Helvetica; font-size: 14px; background-color: rgb(250, 250, 250);"><li style="outline: 0px;"><p style="outline: 0px;">熟悉python，熟悉linux操作，了解mysql关系型数据库</p></li><li style="outline: 0px;"><p style="outline: 0px;">熟悉django框架，了解flask</p></li><li style="outline: 0px;"><p style="outline: 0px;">了解基本爬虫，有scrapy，pyspider等爬虫框架使用经验</p></li><li style="outline: 0px;"><p style="outline: 0px;">对html，css有一定了解</p></li><li style="outline: 0px;"><p style="outline: 0px;">使用git管理代码，上Google解决问题<br style="outline: 0px;"></p></li><li style="outline: 0px;"><p style="outline: 0px;">211学校毕业，智力过关<br style="outline: 0px;"></p></li><li style="outline: 0px;"><p style="outline: 0px;">工作愿望强烈，愿意为工作学习新的技能知识<br style="outline: 0px;"></p></li><li style="outline: 0px;"><p style="outline: 0px;">喜爱编程，学习愿望强烈，闲暇时间会学习新的技术</p></li></ol></p>
+                <p contenteditable="true"></p><ol style="outline: 0px; padding: 0px 0px 0px 2em; list-style-position: initial; list-style-image: initial; color: rgb(85, 85, 85); font-family: &quot;Hiragino Sans GB&quot;, &quot;Microsoft Yahei&quot;, SimSun, Arial, &quot;Helvetica Neue&quot;, Helvetica; font-size: 14px; background-color: rgb(250, 250, 250);"><li style="outline: 0px;"><p style="outline: 0px;">熟悉python，熟悉linux操作，了解mysql关系型数据库</p></li><li style="outline: 0px;"><p style="outline: 0px;">熟悉django框架，了解flask</p></li><li style="outline: 0px;"><p style="outline: 0px;">了解基本爬虫，有scrapy，pyspider等爬虫框架使用经验</p></li><li style="outline: 0px;"><p style="outline: 0px;">对html，css有一定了解</p></li><li style="outline: 0px;"><p style="outline: 0px;">使用git管理代码，上Google解决问题<br style="outline: 0px;"></p></li><li style="outline: 0px;"><p style="outline: 0px;">211学校毕业，智力过关<br style="outline: 0px;"></p></li><li style="outline: 0px;"><p style="outline: 0px;">工作愿望强烈，愿意为工作学习新的技能知识<br style="outline: 0px;"></p></li><li style="outline: 0px;"><p style="outline: 0px;">喜爱编程，学习愿望强烈，闲暇时间会学习新的技术</p></li></ol><p></p>
             </div>
         </div>
     </div>
