--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <div class="container" id="cv">
         <div class="side">
             <div class="me">
-                <div class="portrait" style="background-image: url(&quot;./static/image/myself.jpg&quot;);"></div>
-                
+                <img src="./static/image/myself.jpg" class="portrait">
                 <h1 id="username" contenteditable="true">王华杰</h1>
                 <h4 id="persona-tag" contenteditable="true">Python / Web</h4>
             </div>
